Removed guava dependency from pom.xml to avoid security vulnerability